--- a/for blog function pratice/Kotlin/Intent/DataTransfer/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/Intent/DataTransfer/app/src/main/AndroidManifest.xml
@@ -8,8 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DataTransfer">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <activity android:name=".SubActivity"
+            android:exported="false"
+            ></activity>
+        <activity android:name=".MainActivity"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
