--- a/for blog function pratice/Kotlin/RecyclerView/CustomRecyclerViewDetail/app/build.gradle
+++ b/for blog function pratice/Kotlin/RecyclerView/CustomRecyclerViewDetail/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha02'
 }
