--- a/for blog function pratice/Kotlin/RecyclerView/CustomRecyclerViewDetail/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/RecyclerView/CustomRecyclerViewDetail/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity
-            android:name="com.example.customrecyclerview.MainActivity"
+            android:name=".activity.RecyclerItemDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
