--- a/for blog function pratice/Kotlin/DB/RoomDB/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/DB/RoomDB/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".SelectAllActivity"
+            android:name=".activity.SelectAllActivity"
             android:exported="false" />
         <activity
             android:name=".activity.InsertActivity"
