--- a/for blog function pratice/Kotlin/DB/RoomDB/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/DB/RoomDB/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".activity.SelectByIdActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.SelectAllActivity"
             android:exported="false" />
         <activity
