--- a/for blog function pratice/Kotlin/etc/Spinner/app/build.gradle
+++ b/for blog function pratice/Kotlin/etc/Spinner/app/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
 }
 
 android {
+    namespace 'com.example.spinner'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.roomdb"
+        applicationId "com.example.spinner"
         minSdk 28
         targetSdk 32
         versionCode 1
@@ -30,10 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures{
         viewBinding true
     }
-    namespace 'com.example.roomdb'
 }
 
 dependencies {
@@ -46,9 +46,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "androidx.room:room-runtime:2.4.3"
-    kapt "androidx.room:room-compiler:2.4.3"
-    implementation "androidx.room:room-ktx:2.4.3"
-
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1")
 }
