--- a/for blog function pratice/Kotlin/etc/Spinner/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/etc/Spinner/app/src/main/AndroidManifest.xml
@@ -13,22 +13,17 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".activity.SelectByIdActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.SelectAllActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.InsertActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
     </application>
 
