앱체크 (코틀린) 포스팅 완

--- a/for blog function pratice/Kotlin/Intent/CheckApp/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/Intent/CheckApp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <queries>
-        <package android:name="com.kakaogames.umamusme"/>
+        <package android:name="com.kakaogames.umamusume"/>
         <package android:name="com.nianticlabs.pokemongo"/>
     </queries>
 
