--- a/for blog function pratice/Kotlin/KaKao/KaKaoMap/app/build.gradle
+++ b/for blog function pratice/Kotlin/KaKao/KaKaoMap/app/build.gradle
@@ -2,13 +2,14 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
+apply plugin: 'kotlin-kapt'
 
 android {
-    namespace 'com.example.kakaomap'
+    namespace 'com.example.kakaomapkotlin'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.kakaomap"
+        applicationId "com.example.kakaomapkotlin"
         minSdk 28
         targetSdk 33
         versionCode 1
@@ -24,11 +25,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures{
         dataBinding true
@@ -37,13 +38,14 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    kapt "com.android.databinding:compiler:3.1.4"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
