--- a/for blog function pratice/Kotlin/Intent/ActivityResult/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/Intent/ActivityResult/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ActivityResult"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".SubActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
