--- a/for blog function pratice/Kotlin/Fragment/NavationGraph/app/build.gradle
+++ b/for blog function pratice/Kotlin/Fragment/NavationGraph/app/build.gradle
@@ -28,7 +28,12 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
+    }
+
+    buildFeatures{
+        dataBinding true
+        buildConfig true
     }
 }
 
@@ -41,4 +46,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
+
 }
