사진촬영 결과화면 포스팅 완

--- a/for blog function pratice/Kotlin/Camera/CameraRelated/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/Camera/CameraRelated/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".activity.PhotoResultActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.VideoRecordActivity"
             android:exported="false">
             <meta-data
