--- a/for blog function pratice/Kotlin/Camera/CameraRelated/app/build.gradle
+++ b/for blog function pratice/Kotlin/Camera/CameraRelated/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
 
     //permission
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
 }
