--- a/for blog function pratice/Kotlin/etc/SystemInfo/app/src/main/AndroidManifest.xml
+++ b/for blog function pratice/Kotlin/etc/SystemInfo/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.DEVICE_POWER"
         tools:ignore="ProtectedPermissions" />
 
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+
 
     <application
         android:allowBackup="true"
